# vocabridge

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  history.rs  lib.rs  main.rs  settings.rs  state.rs  windows.rs
src-tauri/src/dict/: cambridge.rs  free_dict.rs  mod.rs  normalize.rs
src/components/: AppPreviewFrame.test.tsx  AppPreviewFrame.tsx  AuxiliaryWindowFrame.tsx  BottomUtilityRail.test.tsx  BottomUtilityRail.tsx  ResultDisplay.test.tsx  ResultDisplay.tsx  SearchInput.test.tsx  SearchInput.tsx  SettingsSections.test.tsx  SettingsSections.tsx  WindowChromeCap.tsx
src/components/ui/: alert-dialog.tsx  button.test.tsx  button.tsx  history-icon.tsx  scroll-area.tsx  select.tsx  settings-icon.tsx  spinner.test.tsx  spinner.tsx  switch.tsx  (+2 more)
src/hooks/: useSearchMachine.test.tsx  useSearchMachine.ts  useSettingsState.test.tsx  useSettingsState.ts  useWindowShortcuts.test.tsx  useWindowShortcuts.ts
src/lib/: commands.test.ts  commands.ts  defaultSettings.ts  koreanKeyboard.test.ts  koreanKeyboard.ts  sourceLabels.ts  tauriRuntime.ts  types.ts  windowApi.test.ts  windowApi.ts  windowKind.test.ts  windowKind.ts
src/test/: setup.ts
src/windows/: HistoryWindow.test.tsx  HistoryWindow.tsx  MainWindow.test.tsx  MainWindow.tsx  SettingsWindow.test.tsx  SettingsWindow.tsx
