[package]
name = "vocabridge"
version = "0.2.0"
description = "A lightweight desktop dictionary app for rapid vocabulary lookup"
authors = ["rennystar"]
edition = "2021"

[features]
default = ["cambridge"]
cambridge = ["dep:scraper"]

[lib]
name = "vocabridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
scraper = { version = "0.22", optional = true }
rusqlite = { version = "0.33", features = ["bundled"] }
rodio = "0.20"
tokio = { version = "1", features = ["rt"] }
